[gd_scene load_steps=5 format=3 uid="uid://cg8hol4n6bcs5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_55e4h"]
[ext_resource type="Texture2D" uid="uid://d2gifrqmxwnmr" path="res://assets/Green.png" id="2_wbkrj"]
[ext_resource type="FontFile" uid="uid://dgf074f5eb505" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_beg4f"]
[ext_resource type="FontFile" uid="uid://op8ilp5s308v" path="res://assets/fonts/PixelOperator8.ttf" id="4_q7002"]

[node name="MainMenu" type="Node" node_paths=PackedStringArray("level_buttons")]
script = ExtResource("1_55e4h")
level_buttons = [NodePath("HBoxContainer/Level1"), NodePath("HBoxContainer/Level2"), NodePath("HBoxContainer/Level3")]

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wbkrj")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -172.0
offset_right = 440.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.29187, 0.46, 0.2254, 1)
theme_override_colors/font_outline_color = Color(0.475793, 0.58, 0.2958, 1)
theme_override_fonts/font = ExtResource("3_beg4f")
theme_override_font_sizes/font_size = 56
text = "Generic Platform Game!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.0
offset_top = 64.0
offset_right = 370.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 56
alignment = 1

[node name="Level1" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_q7002")
theme_override_font_sizes/font_size = 36
text = "Level 1"

[node name="Level2" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_q7002")
theme_override_font_sizes/font_size = 36
disabled = true
text = "Level 2"

[node name="Level3" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_q7002")
theme_override_font_sizes/font_size = 36
disabled = true
text = "Level 3"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.0
offset_top = 162.0
offset_right = 370.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 56
alignment = 1

[node name="Level4" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_q7002")
theme_override_font_sizes/font_size = 36
disabled = true
text = "Level 4"

[node name="Level5" type="Button" parent="HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_q7002")
theme_override_font_sizes/font_size = 36
disabled = true
text = "Level 5"

[node name="Level6" type="Button" parent="HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_q7002")
theme_override_font_sizes/font_size = 36
disabled = true
text = "Level 6"

[connection signal="pressed" from="HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="HBoxContainer2/Level4" to="." method="_on_level_4_pressed"]
